feat: implement user data isolation and organize project structure
- Added user_id to Media model and API endpoints (upload/history)
- Updated frontend SyncService to send user credentials
- Fixed localization issues and removed unsupported languages
- Added integration tests for user isolation
- Cleaned up .gitignore and removed untracked binary files

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,12 @@ AI-Enabled-Crop-Disease-Diagnosis-and-Remediation-Support-System-backend-main 2/
 **/.flutter-plugins-dependencies
 **/.pub-cache/
 **/.pub/
+
+# Mobile Project (Scrapped)
+mobile/
+
+# Database
+*.db
+
+# Temporary Test Files
+dummy.jpg
